Increase width to avoid text cut off

--- a/app/assets/stylesheets/layout/_top_menu.sass
+++ b/app/assets/stylesheets/layout/_top_menu.sass
@@ -307,7 +307,7 @@ input.top-menu-search--input
 
 #account-nav-left
   .drop-down
-    max-width: 186px
+    max-width: 300px
 
   #projects-menu
     overflow: hidden
